Add auxiliar fit function

--- a/doc/theory/Neural network mathematical theory (Fr)/03-Backpropagation.tex
+++ b/doc/theory/Neural network mathematical theory (Fr)/03-Backpropagation.tex
@@ -131,8 +131,8 @@
 		\[= g\left(z^{(k)}_j\right) \left(dL^{(k+1)}\right)_i\]
 		\[= \left[dL^{(k+1)} g\left(z^{(k)}\right)^T\right]_{i,j}\]
 		
-		\[\Rightarrow \boxed{dW^{(k)} = \left[dL^{(k+1)}g\left(z^{(k)}\right)^T\right]}\]
+		\[\Rightarrow \boxed{dW^{(k)} = dL^{(k+1)}g\left(z^{(k)}\right)^T}\]
 		
 		\item Pour $k$ = 0\\
-			\[\Rightarrow \boxed{dW^{(0)} = \left[dL^{(k+1)}x^T\right]}\]
+			\[\Rightarrow \boxed{dW^{(0)} = dL^{(k+1)}x^T}\]
 	\end{itemize}
